# AskCorp

./: .gitignore  lambda.md  lambda_function.py  lambda_layer.md  llm_retriever_lf.py  pyproject.toml  requirements.txt
aws/: opensearch-insert.py
exploratory_data_analysis/: langchain-agent.ipynb  model-law-processor.ipynb
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
langchain/: 2-explor-rag-langchain.ipynb  model-law-processor.ipynb  structured.json
src/: build_vector_db.py  debug-rag.ipynb  document_processor.py  model_law_processor.py  rag_query.py  state_page.py
ui/: index.html
ui/css/: styles.css
ui/js/: app.js
