[project]
name = "langchain-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.73.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-aws>=1.2.5",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "pdftitle>=0.20",
    "pypdf>=6.7.0",
    "python-dotenv>=1.2.1",
]
