[project]
name = "langchain-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.73.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.10",
    "langchain-aws>=1.2.5",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pdf2image>=1.17.0",
    "pdftitle>=0.20",
    "pillow>=12.1.1",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.57.6",
]
