[project]
name = "langchain-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.49",
    "chromadb>=1.5.2",
    "docling>=2.73.1",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.10",
    "langchain-aws>=1.2.5",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "opensearch-py>=3.1.0",
    "pdf2image>=1.17.0",
    "pdftitle>=0.20",
    "pillow>=12.1.1",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "requests-aws4auth>=1.3.1",
    "sentence-transformers>=5.2.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.57.6",
]
